# warehouse-system

./: .env  .gitignore  docker-compose.yml  docker-compose.yml.backup
backend/: Cargo.toml  Dockerfile.dev
backend/migrations/: 20250919015642_warehouse_schema.sql  20250919060820_simple_warehouse_schema.sql  20250919062800_items_management_schema.sql
backend/warehouse-api/: Cargo.toml
backend/warehouse-api/src/: main.rs
backend/warehouse-core/: Cargo.toml
backend/warehouse-core/src/: error.rs  lib.rs
backend/warehouse-core/src/config/: mod.rs
backend/warehouse-db/: Cargo.toml
backend/warehouse-db/src/: connection.rs  items.rs  lib.rs  projects.rs  utils.rs
backend/warehouse-db/src/repositories/: items.rs  mod.rs  warehouses.rs
backend/warehouse-models/: Cargo.toml
backend/warehouse-models/src/: lib.rs  warehouse.rs
docker/postgres/: init.sql
docker/redis/: redis.conf
scripts/: check-environment.sh  cleanup.sh
