[package]
name = "warehouse-db"
version = "0.1.0"
edition = "2021"
description = "Database layer for warehouse management system"

[dependencies]
warehouse-models = { path = "../warehouse-models" }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json", "migrate"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4"] }
tokio = { version = "1.35", features = ["full"] }
