[package]
name = "warehouse-models"
version = "0.1.0"
edition = "2021"
description = "Data models for warehouse management system"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
rust_decimal = { version = "1.33", features = ["serde"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
validator = { version = "0.18", features = ["derive"] }
thiserror = "1.0"
